2003-02-13  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_cookie.h(opd_nr_lookup_dcookie): Correct number.

2003-02-13  Will Cohen  <wcohen@redhat.com>

	* daemon/opd_cookie.h(opd_nr_lookup_dcookie): Add x86_64.

2003-02-13  John Levon  <levon@movementarian.org>

	* dae/opd_image.c: little cleanup and fix error message
	  to not lie

2003-02-12  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.xml: enhance doc about --separate=kernel

	* utils/opcontrol: handle gracefully opcontrol --deinit if profiler
	  was already shutdown. Avoid wrong warning when umount /dev/oprofile

2003-02-12  Will Cohen  <wcohen@redhat.com>

	* gui/oprof_start.cpp (oprof_start::oprof_start,
	    oprof_start::on_flush_profiler_data,
	    oprof_start::on_start_profiler,
	    oprof_start::on_stop_profiler): Use opcontrol.
	* gui/oprof_start_util.cpp (daemon_status::daemon_status):
	    Allow reading interrupt info from new kernel interface.
	* libop/op_get_interface.c: New.
	* libop/Makefile.am: Add libop/op_get_interface.c.
	* libop/op_cpu_type.h: Add enum op_interface.

	I Added some bits. Phil
	* gui/oprof_start.cpp: correct --separate= handling
	* gui/oprof_start_util.cpp: read only the real number of interrupts

2003-02-12  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: handle --note-table-size --kernel-only (2.4 kernel)

2003-02-12  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_start: map --separate-samples to daemon option
	  --separate-lib-samples.

2003-02-11  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_kernel.h:
	* dae/opd_parse_proc.c:
	* dae/opd_proc.c:
	* dae/opd_proc.h:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_kernel.c:
	* daemon/opd_kernel.h:
	* daemon/opd_sample_files.c:
	* daemon/oprofiled.c: per application kernel samples files

	* doc/oprofile.1.in:
	* doc/oprofile.xml: document opcontrol --separate=kernel
