@@ -1,3 +1,10 @@
+2003-02-13  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* dae/opd_kernel.h:
+	* dae/opd_image.h:
+	* dae/opd_image.c: don't use hash entry zeo for kernel image
+	 fix #686175
+
 2003-02-13  Will Cohen  <wcohen@redhat.com>
 
 	* daemon/opd_cookie.h(opd_nr_lookup_dcookie): Correct number.
